=head1 Krang Changelog

This document contains a list of changes for each release of Krang.


=head2 2.X - IN DEVELOPMENT

=over 

=item *

Modified Site Server configuration to support CGI applications
(ending in ".cgi") and Apache::Registry apps (ending ".pl").
This will permit the site server to host interactive applications.
[Jesse Erlbaum]


=item *

Added new parameter "mode" to additional_content_block() method
in Publisher.  This new parameter permits the permission of the
file to be set, which is particularly useful for publishing
executable files.  [Jesse Erlbaum]


=item * 

Changed SiteServer to forbid any request which doesn't match a
publish or preview URL.  SiteServer trans handler now sets up 
C< $ENV{DOCUMENT_ROOT} > correctly which is needed in a CGI environment.
[Jesse Erlbaum]


=item * 

Krang::lib set to also ignore ".svn" directories.  [Jesse Erlbaum]

=item *

Stricter enforcement of asset permissions. [Michael Peters]

=item *

During Apache startup, krang now properly calls AddOn
init-handlers. [Michael Peters]

=back



=head2 2.008 - Dec 20th, 2006

=over

=item *

Fixed a long standing publishing bug.  Shuffling stories around could
cause the wrong files to be deleted when publishing.  [Sam]

=item *

Added several new configuration options which allow Krang instances to
run on separate IPs and have different SSL configurations.  [Sam]

=item *

Added a new option for addons, DataSetClasses.  This allows addons to
extend Krang::DataSet and include new objects in KDS files.  [Sam]

=item *

Implemented a system of univerally-unique identfiers (UUIDs) for Krang
objects with keys that may change (ex. stories may change their URL).
This allows updates between machines to propogate these changes
correctly when objects are moved with krang_export and krang_import.
[Sam]

=item *

Added C<PasswordChangeTime> and C<PasswordChangeCount> directives
to allow the forcing of users to change their password every C<PasswordChangeTime>